# CH582-TinyMaix

./: CMakeLists.txt  readme.md
TinyMaix/include/: tm_port.h
cmake/: extension.cmake  xxx_sdk-config.cmake
drv/ch58x_drivers/HAL/: MCU.c  RTC.c
drv/ch58x_drivers/HAL/include/: HAL.h  ch_config.h
drv/ch58x_drivers/MESH_LIB/: CH58xBLE_ROM_MESH.hex  MESH_LIB.h
drv/ch58x_drivers/StdPeriphDriver/: CH58x_spi0.c  CH58x_uart1.c  CH58x_usb2hostBase.c  CH58x_usb2hostClass.c
drv/ch58x_drivers/StdPeriphDriver/inc/: CH58x_usbhost.h
examples/ch58x/: CmakeLists.txt  Makefile  main.c
